--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-factoryboy = "^2.5.0"
 djoser = "^2.1.0"
 drf-spectacular = "^0.24.0"
 django-cors-headers = "^3.13.0"
+idna = "^3.4"
 
 [tool.poetry.dev-dependencies]
 
