--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-Django~=4.1.1
-djangorestframework~=3.13.1
-djoser~=2.1.0
-django-email-users~=1.1.0
 asgiref==3.4.1
 black==22.1.0
 certifi==2021.10.8
@@ -12,13 +8,17 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.1
 defusedxml==0.7.1
+Django==3.2.6
 django-cors-headers==3.8.0
 django-filter==21.1
 django-phonenumber-field==6.0.0
 django-templated-mail==1.1.1
+djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 drf-nested-routers==0.93.4
 drf-yasg==1.20.0
+idna==3.4
 inflection==0.5.1
 isort==5.10.1
 itypes==1.2.0
@@ -45,7 +45,7 @@ ruamel.yaml.clib==0.2.6
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
-sqlparse==0.4.3
+sqlparse==0.4.2
 tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.8
